# miniportal-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  browser.py  cache.py  config.yaml  logging_config.py  login_capture.py  pyproject.toml  security.py  server.py
src/miniportal/: logging_config.py  server.py
